# pico-rocq

./: .Makefile.d  .gitignore  .gitmodules  AbstractStatePreservation.v  AuthorityCapability.v  AuthorityHistory.v  Bigstep.v  CODEX_PROOF_COMPLETION_PROMPT.md  CallFrameWellformed.v  ComponentColoring.v  ConcreteImmutability.v  ConcreteState.v  ConcreteStateImmutability.v  ConcreteStatePreservation.v  ConcurrentPico.v  ConcurrentPicoExamples.v  CoqMakefile.conf  DERIVED_CACHE_ARTIFACT.md  DeepImmutability.v  DerivedCache.v  DerivedCacheExamples.v  DerivedCacheIris.v  DerivedCacheIrisExamples.v  ExecutionConfinement.v  ForwardCapabilityHistory.v  Helpers.v  LICENSE  LibTactics.v  LiveCapabilityStack.v  Makefile  MutableCapability.v  Notations.v  ObjectCreationExamples.v  PICO_IRIS_ROADMAP.md  PicoIrisCacheBridge.v  PotentialCapability.v  Preservation.v  Properties.v  ProtectedFieldPreservation.v  ProtectionHistory.v  (+27 more)
Core/: CacheLRVerticalSlice.v  GenericCacheProtocol.v  GenericDerivedCache.v
Examples/: ConcurrentPicoExamples.v  DerivedCacheExamples.v  DerivedCacheIrisExamples.v  LocalCopyCacheRule.v  PicoConcreteHashModel.v  PicoHashExecutionTrace.v  PicoIfZeroCacheExamples.v  PicoSemanticCacheAPIExamples.v  PicoSemanticConcurrencyExamples.v  PicoSemanticConcurrencySafety.v  StringCacheIris.v  WeakPicoExamples.v
Iris/: DerivedCacheIris.v  GenericCacheGhostState.v  GenericCacheIris.v  GenericDerivedCacheIris.v  IrisSemanticBridge.v
PICOBridge/: ConcurrentPico.v  PicoCacheTyping.v  PicoIrisCacheBridge.v  PicoIrisCacheInvariant.v  PicoIrisCoreInvariant.v  PicoIrisWP.v  (+21 more)
(+36 files in other folders)
