opam-version: "2.0"
synopsis: "Pico Coq formalization"
description: "Pico language formalization and proofs in Rocq/Coq."
maintainer: ["pico-coq"]
authors: ["pico-coq"]
license: "MIT"
depends: [
  "ocaml" {>= "5.2.1"}
  "coq" {>= "9.1.0"}
  "coq-record-update" {= "0.3.4"}
  "dune" {>= "3.11"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
